welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: ';' expected but ')' found.
    	while (!isFacingTrail()){gauche())}
                                         ^